Adds steps for staking cardano with info pages

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2612,7 +2612,6 @@ input, select, textarea {
 			.image.main img {
 				width: 100%;
 			}
-
 /* List */
 
 	ol {
@@ -3049,6 +3048,7 @@ input, select, textarea {
 			justify-content: center;
 			width: 50em;
 			-ms-flex: 1;
+			flex: 1;
 		}
 
 			.spotlights > section > .content > .inner {
